Labtest exercise2 inheritance finished

--- a/EECS2030_F19_Programming_Labtest_2_Exercises_2/bin/.gitignore
+++ b/EECS2030_F19_Programming_Labtest_2_Exercises_2/bin/.gitignore
@@ -1,1 +1,7 @@
 /Tests.class
+/StudentManagementSyste.class
+/Course.class
+/StudentManagementSystem.class
+/Student.class
+/ResidentStudent.class
+/NonResidentStudent.class
